Removed some padding and margin from the nav menu to fix an alignment issue with the header of the main content

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,13 +50,15 @@ nav {
   .nav--menu li {
     list-style: none;
     padding: 5px 0; }
-  @media (min-width: 768px) {
-    .nav--menu {
-      display: initial;
-      border: 0;
-      border-right: 1px dotted var(--purple);
-      padding-right: 20px;
-      margin-right: 0; } }
+
+@media (min-width: 768px) {
+  .nav--menu {
+    display: initial;
+    border: 0;
+    border-right: 1px dotted var(--purple);
+    padding-right: 20px;
+    margin: 0;
+    padding-top: 0px; } }
 
 /* for images and diagrams. there will be plenty on the site */
 /* 
